<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">hathor</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don"\'"t have an account?</string>
    <string name="sign_up_textView"><u>Sign Up</u></string>
    <string name="logo">Logo</string>
    <string name="let_s_continue_the_journey">Let"\'"s continue the journey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="getting_started">Getting Started</string>
    <string name="create_an_account_to_start_your_journey">Create an account to start your journey!</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone_number">phone number</string>
    <string name="by_signing_up_you_agree_to_our">By Signing up, you agree to our</string>
    <string name="term_and_conditions">Term and Conditions</string>
    <string name="products">Products</string>
    <string name="special_offers">Special Offers</string>
    <string name="profile">Profile</string>
    <string name="basket">Basket</string>
    <string name="details">DETAILS</string>
    <string name="email_null_error">Email cannot be empty</string>
    <string name="email_short_error">Email cannot be this short</string>
    <string name="email_invalid_error">Invalid email</string>
    <string name="password_null_error">Password cannot be empty</string>
    <string name="add_basket">Added to your basket</string>
    <string name="pay">Pay</string>
    <string name="forgotten_password_message">An email has been sent. Please click the link when you get it.</string>
</resources>